# fplll

./: .check-m4.sh  .clang-format  .gitignore  .travis-check-style.sh  .travis.yml  AUTHORS  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTING_8md.html  ChangeLog  Doxyfile  Makefile.am  NEWS  README  README.html  README.md  README_8md.html  annotated.html  bkz_8cpp.html  bkz_8h.html  bkz_8h__dep__incl.map  bkz_8h__dep__incl.md5  bkz_8h_source.html  bkz__param_8cpp.html  bkz__param_8h.html  bkz__param_8h__dep__incl.map  bkz__param_8h__dep__incl.md5  bkz__param_8h_source.html  classBKZAutoAbort.html  classBKZParam.html  classBKZReduction.html  classCallbackEvaluator.html  classEnumeration.html  classEnumerationBase.html  classEnumerationDyn.html  classEnumerator.html  classErrorBoundedEvaluator.html  classEvaluator.html  classEvaluator_3_01Float_01_4.html  classExactErrorBoundedEvaluator.html  (+571 more)
fplll/: Makefile.am  Makefile.am.nolib  ballvol.const  bkz.cpp  bkz.h  bkz_param.cpp  bkz_param.h  bkz_params.cpp  bkz_params.h  defs.h  factorial.const  fplll.cpp  fplll.h  fplll_config.cmake.h.in  fplll_config.h.in  fplllv31.h  ggso.cpp  ggso.h  gso.cpp  gso.h  gso_base.cpp  gso_base.h  gso_givens.cpp  gso_givens.h  gso_gram.cpp  gso_gram.h  gso_householder.cpp  gso_householder.h  gso_interface.cpp  gso_interface.h  gsob.cpp  gsob.h  hlll.cpp  hlll.h  hnf.cpp  hnf.h  householder.cpp  householder.h  latticegen.cpp  latticegen_dbg  (+18 more)
fplll/enum/: counters.h  enumerate.cpp  enumerate.h  enumerate_base.cpp  enumerate_base.h  enumerate_dyn.cpp  enumerate_dyn.h  enumerate_ext.cpp  enumerate_ext.h  enumerate_ext_api.h  evaluator.cpp  evaluator.h  topenum.cpp  topenum.h
fplll/enum-cuda/: CudaEnumeration.vcxproj  CudaEnumeration.vcxproj.filters  README.md  atomic.cuh  atomic.h  cuda_check.h  cuda_util.cuh  cuda_wrapper.cu  cuda_wrapper.h  enum.cu  enum.cuh  enum.h  enum.old.cu  enum2.cu  enum_tree_graphic.ipe  enumerate_cuda.cpp  enumerate_cuda.h  gpufunc.h  memory.h  prefix.cuh  recenum.cuh  streaming.cuh  test.cpp  test.cu  testdata.cpp  testdata.h  treebuffer.cuh  types.cuh  util.h  wrapper.cu  wrapper.h
fplll/enum-cuda/cuda-enum/: cuda-enum.ncu-proj
fplll/enum-cuda/x64/Debug/: CudaEnumeration.exe.recipe  CudaEnumeration.exp  CudaEnumeration.ilk  CudaEnumeration.lib  CudaEnumeration.vcxproj.FileListAbsolute.txt  enum.cu.cache  enum.cu249974011.deps  enum2.cu.cache  (+5 more)
fplll/enum-parallel/: enumeration.h  enumlib.cpp  enumlib.h  enumlib_dim.100.cpp  enumlib_dim.110.cpp  enumlib_dim.120.cpp  enumlib_dim.130.cpp  enumlib_dim.140.cpp  enumlib_dim.150.cpp  enumlib_dim.160.cpp  enumlib_dim.20.cpp  enumlib_dim.30.cpp  enumlib_dim.40.cpp  enumlib_dim.50.cpp  enumlib_dim.60.cpp  enumlib_dim.70.cpp  enumlib_dim.80.cpp  enumlib_dim.90.cpp  enumlib_dim.cpp  fplll_types.h
fplll/io/: json.hpp  thread_pool.hpp
fplll/nr/: dpe.h  matrix.cpp  matrix.h  nr.h  nr_FP.inl  nr_FP_d.inl  nr_FP_dd.inl  nr_FP_dpe.inl  nr_FP_float128.inl  nr_FP_ld.inl  nr_FP_misc.inl  nr_FP_mpfr.inl  nr_FP_qd.inl  nr_Z.inl  nr_Z_d.inl  nr_Z_l.inl  nr_Z_misc.inl  nr_Z_mpz.inl  nr_rand.inl  numvect.h
fplll/pruner/: pruner.cpp  pruner.h  pruner_cost.cpp  pruner_optimize.cpp  pruner_optimize_tc.cpp  pruner_optimize_tp.cpp  pruner_prob.cpp  pruner_simplex.h  pruner_util.cpp
fplll/sieve/: sampler_basic.cpp  sampler_basic.h  sampler_main.cpp  sieve_common.h  sieve_cvpp.cpp  sieve_gauss.cpp  sieve_gauss.h  sieve_gauss_2sieve.cpp  sieve_gauss_3sieve.cpp  sieve_gauss_4sieve.cpp  sieve_gauss_str.h  sieve_main.cpp  sieve_main.h
fplll/simd/: simd.cpp  simd.h  simd_avx256.cpp  simd_avx256_double.cpp  simd_generic.h
src/: LLL-cohen.cpp  Makefile  Makefile.am  bkz.cpp  bkz.h  bkz_params.cpp  bkz_params.h  crt.cpp  defs.h  dpe.h  enumerate.cpp  enumerate.h  evaluator.h  example_out  example_svp_out  fplll.cpp  fplll.h  fplll_config.h.in  gs.cpp  gso.cpp  gso.h  latticegen.cpp  lll-implement.cpp  lll.cpp  lll.h  main.cpp  main.h  matrix.cpp  matrix.h  nr.cpp  nr.h  nr_FP_d.inl  nr_FP_dpe.inl  nr_FP_misc.inl  nr_Z.inl  nr_Z_d.inl  nr_Z_misc.inl  nr_Z_mpz.inl  numvect.h  pruner.cpp  (+12 more)
src/enum/: enumerate.cpp  enumerate.h  enumerate_base.h  evaluator.cpp  topenum.cpp  topenum.h
src/nr/: matrix.cpp  matrix.h  nr.h  nr_FP.inl  nr_FP_d.inl  nr_FP_dd.inl  nr_FP_dpe.inl  nr_FP_ld.inl  nr_FP_mpfr.inl  nr_FP_qd.inl  nr_Z_l.inl  nr_Z_mpz.inl  nr_rand.inl  numvect.h
src/sieve/: sampler_basic.cpp  sampler_basic.h  sampler_main.cpp  sieve_Gauss.cpp  sieve_Gauss.h  sieve_Gauss_2sieve.cpp  sieve_Gauss_3sieve.cpp  sieve_Gauss_4sieve.cpp  sieve_Gauss_str.h  sieve_common.h  sieve_main.cpp  sieve_main.h
src/sieve/dgs/: dgs_bern.c  dgs_bern.h  dgs_gauss.h  dgs_gauss_dp.c  dgs_gauss_mp.c  dgs_misc.h  test_gauss_z  test_gauss_z.cpp
src/tests/: simple_intmul.cpp  simple_lll.cpp
tests/: CMakeLists.txt  Makefile.am  test_babai.cpp  test_benchmark.cpp  test_bkz.cpp  test_bkz_gram.cpp  test_ceil.cpp  test_counter.cpp  test_cvp.cpp  test_enum.cpp  test_gso.cpp  test_hlll.cpp  test_hnf.cpp  test_lll.cpp  test_lll_givens.cpp  test_lll_gram.cpp  test_nr.cpp  test_pruner.cpp  test_sieve.cpp  test_simd.cpp  test_svp.cpp  test_svp_gram.cpp  test_tutorials.cpp  test_tutorials.sh  test_utils.h
tests/lattices/: BKZ_basis_for_BKZ_with_parameters  BKZ_reduction_evaluation  BKZ_reduction_with_parameters_example  base_generation_evaluation  default_BKZ_reduction_example  default_bkz_basis  dim55_in  example2_in  example3_in  example_cvp_in_lattice2  example_cvp_in_lattice3  example_cvp_in_lattice4  example_cvp_in_target  example_cvp_in_target2  example_cvp_in_target3  example_cvp_in_target4  example_cvp_out  example_cvp_out2  example_cvp_out3  example_cvp_out4  example_cvp_out5  example_dsvp_in  example_dsvp_out  example_in  example_list_cvp_in_lattice  example_svp_in  grammatrix_dimension4  grammatrix_dimension4_out  grammatrix_dimension7  grammatrix_dimension7_out  intrel_base_example  lll_fast_basis  lll_fast_example  lll_heuristic_basis  lll_heuristic_example  lll_proved_basis  lll_proved_example  lll_reduction_evaluation  ntrulike2_base_example  ntrulike2_withq_base_example  (+10 more)
(+207 files in other folders)
